<resources>
    <string name="app_name">Practica_Examen_Final</string>
    <string name="lista_programas_tv">Lista de Programas de Televisión</string>
    <string name="programa_added">Programa Agregado</string>
    <string name="no_data">Faltan Datos</string>
    <string name="msg_nombre_programa">Nombre del Programa</string>
    <string name="msg_descripcion_programa">Descripcion del Programa</string>
    <string name="msg_hora">Hora del Programa</string>
    <string name="bt_agregar_programa">Agregar Programa</string>
    <string name="msg_canal">Canal del Programa</string>
    <string name="msg_productor">Productor del Programa</string>
    <string name="bt_actualizar_programa">Actualizar Programa</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_programa">Programas</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="programa_updated">Programa Actualizado</string>
    <string name="msg_nombre_amigo">Nombre del Amigo</string>
    <string name="msg_telefono">Telefono</string>
    <string name="bt_llamar">Llamar Amigo</string>
</resources>